# libmatrix

./: .gitignore  Mat.h  meson.build
include/: Matrix.h
test/: Matrix_test.cpp
